deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ci-health
  namespace: ci-health
  labels:
    app: ci-health
spec:
  host: hypershift-ci-health.apps.rosa.hypershift-ci-2.1xls.p3.openshiftapps.com
  to:
    kind: Service
    name: ci-health
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
